# sioyek

./: .gitignore  .gitmodules  .ignore  CMakeLists.txt  README.md  build_mac.sh  build_mupdf_for_ios.sh  make_script.sh  makerules_changes_for_iphone_simulator.patch  pch.h  pdf_viewer_build_config.pro  resources.qrc
android/: AndroidManifest.xml  build.gradle
data/: sioyek_documentation.json
docs/commands/: add_annot_to_highlight.md  add_bookmark.md  add_freetext_bookmark.md  add_highlight.md  add_highlight_with_current_type.md  add_keybind.md  add_marked_bookmark.md  add_marked_data.md  cancel_all_downloads.md  change_highlight.md  citers.md  clear_current_page_document_drawings.md  clear_scratchpad.md  close_overview.md  close_window.md  command.md  command_palette.md  control_menu.md  convert_to_latex.md  copy.md  copy_drawings_from_scratchpad.md  copy_link.md  copy_screenshot_to_clipboard.md  copy_screenshot_to_scratchpad.md  create_fulltext_index_for_current_document.md  create_visible_portal.md  delete_all_pdf_annotations.md  delete_current_file_from_server.md  delete_document_from_fulltext_search_index.md  delete_freehand_drawings.md  delete_highlight_under_cursor.md  delete_portal_bookmark_highlgight.md  delete_visible_bookmark.md  documentation_search.md  donate.md  download_and_clipboard_paper_url.md  download_link.md  download_overview_paper.md  download_paper_under_cursor.md  download_paper_with_name.md  (+191 more)
docs/configs/: add_newlines_when_copying_text.md  adjust_annotation_colors_for_dark_mode.md  align_link_dest_to_top.md  align_link_dst_to_top.md  allow_horizontal_drag_when_document_is_small.md  allow_main_view_scroll_while_in_overview.md  always_copy_selected_text.md  always_render_bookmarks.md  annotations_directory.md  auto_bookmark_horizontal_vertical_margin.md  auto_login_on_startup.md  auto_rename_downloaded_papers.md  autocenter_ruler.md  automatically_download_matching_paper_name.md  automatically_index_documents_for_fulltext_search.md  automatically_update_checksum_when_document_is_changed.md  automatically_upload_portal_destination_for_synced_documents.md  background_bookmarks_pixel_budget.md  background_color.md  bookmark_font_facr.md  box_highlight_bookmark_transparency.md  case_sensitive_search.md  check_for_updates_on_startup.md  click_commands.md  collapsed_toc.md  color_mode.md  context_menu_items.md  create_table_of_contents_if_not_exists.md  custom_color_contrast.md  custom_text_background_color.md  dark_mode_contrast.md  default_open_file_path.md  document_location_mismatch_strategy.md  documentation_font_size.md  dont_center_if_synctex_rect_is_visible.md  draw_unrendered_pages.md  epub_css.md  epub_width_height_font_size.md  exact_highlight_select.md  external_text_editor_command.md  (+126 more)
docs/scripts/: compile_docs.py  compiled_commands.md  compiled_configs.md  config_names.txt  generate_latex_doc.py  generate_video.py  sioyek_documentation.aux  sioyek_documentation.json  sioyek_documentation.out  sioyek_documentation.toc  stats.py  upload_videos.py
ios/: Info.plist  ios_specific.mm
microtex/: microtex_build.pri
microtex/atom/: atom_basic.h
microtex/samples/: qt_main.cpp  qt_mainwindow.cpp  qt_mainwindow.h  qt_texqmlitem.cpp  qt_texqmlitem.h
pdf_viewer/: RunGuard.cpp  apple_specific.mm  background_tasks.cpp  background_tasks.h  book.cpp  book.h  checksum.cpp  checksum.h  config.cpp  config.h  coordinates.cpp  coordinates.h  database.cpp  database.h  document.cpp  document.h  document_view.cpp  document_view.h  input.cpp  input.h  keys.config  macos_specific.mm  main.cpp  main_widget.cpp  main_widget.h  mysortfilterproxymodel.cpp  mysortfilterproxymodel.h  network_manager.cpp  network_manager.h  path.cpp  path.h  pdf_renderer.cpp  pdf_renderer.h  pdf_view_opengl_widget.cpp  pdf_view_opengl_widget.h  prefs.config  renderer_widget.cpp  renderer_widget.h  status_string.cpp  status_string.h  (+4 more)
pdf_viewer/commands/: annotation_commands.cpp  annotation_commands.h  base_commands.cpp  base_commands.h  command_parser.cpp  command_parser.h  misc_commands.cpp  misc_commands.h  navigation_commands.cpp  navigation_commands.h  network_commands.cpp  network_commands.h
pdf_viewer/controllers/: annotation_controller.cpp  annotation_controller.h  base_controller.cpp  base_controller.h  documentation_controller.cpp  documentation_controller.h  external_controller.cpp  external_controller.h  javascript_controller.cpp  javascript_controller.h  navigation_controller.cpp  navigation_controller.h  network_controller.cpp  network_controller.h  selection_controller.cpp  selection_controller.h  tts_controller.cpp  tts_controller.h  widget_controller.cpp  widget_controller.h
pdf_viewer/touchui/: AudioUI.cpp  AudioUI.h  ConfigUI.cpp  ConfigUI.h  GenericListViewDelegate.qml  TouchAudioButtons.cpp  TouchBaseWidget.cpp  TouchBaseWidget.h  TouchBookmarksView.qml  TouchChat.cpp  TouchChat.h  TouchChat.qml  TouchConfigMenu.cpp  TouchConfigMenu.h  TouchConfigMenu.qml  TouchDrawControls.cpp  TouchEnumSelector.qml  TouchHighlightButtons.cpp  TouchHighlightButtons.h  TouchHighlightButtons.qml  TouchHighlightsView.qml  TouchListView.cpp  TouchListView.h  TouchListView.qml  TouchMainMenu.cpp  TouchMainMenu.h  TouchMainMenu.qml  TouchPageSelector.qml  TouchSettings.cpp  TouchSettings.h  TouchSettings.qml  TouchShowKeyboardWidget.cpp  TouchShowKeyboardWidget.h  TouchSlider.cpp  TouchSlider.h  TouchSlider.qml  TouchSymbolColorSelector.qml  TouchTextEdit.cpp  TouchTextEdit.h  TouchTextEdit.qml
pdf_viewer/types/: annotation_types.cpp  annotation_types.h  common_types.cpp  common_types.h  drawing_types.h  overview_types.cpp  overview_types.h  visible_object_types.h
pdf_viewer/ui/: annotation_widgets.cpp  bookmark_ui.h  (+11 more)
python_api/: pyproject.toml
qsb_shaders/: color.frag  color.vert  colored_rect.frag  custom.frag  dark.frag  drawing.frag  drawing.vert  drawing_command.frag  highlight.frag  highlight_border.frag  highlight_border.vert  rebuild.bat  rebuild.sh  simple_highlight.vert  simple_texture.vert  stencil.frag  test.frag
resources/: sioyek.desktop
tutorial/: compile.sh
(+43 files in other folders)
